Add 404.html to handle page reloads

--- a/public/404.html
+++ b/public/404.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Page Not Found</title>
-    <meta http-equiv="refresh" content="0;url=/" />
+    <meta http-equiv="refresh" content="0;url=/#/" />
     <script type="text/javascript">
       // Redirect to the correct route based on the URL path
       (function () {
